@@ -933,6 +933,9 @@ list only saved files
 -alist-ea, --alter=list-ea
 list Extended Attributes name for each file that has some.
 .TP 20
+-ay, --alter=byte, --alter=bytes
+by default files size is displayed to occupy the shortest number of characters by using the largest unit possible (KiB, MiB, GiB, and so on). With this option instead, the size is displayed with maximum precision using the exact number of bytes used for each file.
+.TP 20
 -I, -X, -P, -g, -[, -]
 can be used to filter file to list base on their name or path.
 .PP
